footer white space fixed

--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,8 +1,8 @@
 .main-footer{
-  background-color: whitesmoke;
-  padding-top: 1em;
+  background: rgb(247, 246, 246);
+  padding-top: .5rem;
   grid-row: auto;
   position: relative;
-  bottom: 0;
-  width: 100%;
+  min-height: 20vh;
+  width: auto;
 }
